# Projet-5

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: cd-production.yml  cd-staging+prod.yml  cd-staging.yml  ci-features.yml
data/raw/: building_consumption.csv
src/: project_config.py
src/api/: main.py  schemas.py
src/client/: client.py
src/database/: db_manager.py  init_db.py  models.py
src/model/: model_loader.py  preprocessing.py  train.py
tests/: test_api.py  test_preprocessing.py
tests/functional/: test_api_staging.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_database_manager.py
