[project]
name = "projet-5"
version = "0.1.0"
description = "Déployez un modèle de Machine Learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
